--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node server.js",
-		"server": "nodemon server.js"
+		"server": "nodemon server.js",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.21.1",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"express-graphql": "^0.12.0",
-		"graphql": "^15.5.0"
+		"graphql": "^15.5.0",
+		"react-router-dom": "^5.2.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.7"
